--- a/gardencity/package.json
+++ b/gardencity/package.json
@@ -14,6 +14,7 @@
     "airtable": "^0.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-geocode": "^0.2.3",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
